# advent-of-code

./: .gitignore  Cargo.toml
.cargo/: config.toml
data/examples/: 2015_01.json  2015_01_01.json  2015_01_02.json  2015_01_1.json  2015_01_2.json  2015_02.json  2015_02_01.json  2015_02_02.json  2015_02_1.json  2015_02_2.json  2015_03.json  2015_03_01.json  2015_03_02.json  2015_04.json  2015_04_01.json  2015_05.json  2015_05_01.json  2015_05_02.json  2015_06.json  2015_06_01.json  2015_06_02.json  2015_08_01.json  2015_08_02.json  2015_09_01.json  2015_09_02.json  2015_10_01.json
src/: assets.rs  lib.rs  main.rs  template.rs
src/assets/: bin.txt  example.txt  puzzle.txt  solution.txt
src/puzzles/: mod.rs
src/puzzles/_2015_01_01/: solution.rs
src/puzzles/_2015_01_02/: description.md  solution.rs
src/puzzles/_2015_02_01/: description.md  solution.rs
src/puzzles/_2015_02_02/: description.md  solution.rs
src/puzzles/_2015_03_01/: description.md  solution.rs
src/puzzles/_2015_03_02/: solution.rs
src/puzzles/_2015_04_01/: description.md  solution.rs
src/puzzles/_2015_04_02/: solution.rs
src/puzzles/_2015_05_01/: description.md  solution.rs
src/puzzles/_2015_05_02/: solution.rs
src/puzzles/_2015_06_01/: description.md  solution.rs
src/puzzles/_2015_06_02/: solution.rs
src/puzzles/_2015_07_01/: solution.rs
src/puzzles/_2015_07_02/: solution.rs
src/puzzles/_2015_08_01/: description.md  solution.rs
src/puzzles/_2015_08_02/: description.md  solution.rs
src/puzzles/_2015_09_01/: description.md  solution.rs
(+6 files in other folders)
