[package]
name = "aoc"
version = "0.1.0"
description = "an advent of code solutions"
edition = "2021"
default-run = "aoc"
publish = false

[dependencies]
clap = { version = "=4.5.41", features = ["derive"] } 
serde = { version = "=1.0.219", features = ["derive"] }
serde_json ={ version = "=1.0.141" }
md5 = { version = "=0.8.0" } 
rayon = { version = "=1.10.0" }
aoc-client = { version = "=0.2.0" }